--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -19,9 +20,14 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@iconify/react": "^4.1.1",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "heroicons": "^2.0.18",
+    "react-insta-stories": "^2.6.2",
+    "zuck.js": "^2.1.0"
   }
 }
