--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@uiw/react-md-editor": "^4.0.1",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
     "javascript-time-ago": "^1.0.16",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "rehype-sanitize": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
   },
