--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
+    "react-markdown-renderer": "^1.4.0",
     "rehype-sanitize": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
