--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "react-markdown-renderer": "^1.4.0",
