--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@capacitor/android": "^5.6.0",
+    "@capacitor/core": "^5.6.0",
     "@material-tailwind/react": "^2.1.5",
     "@mdxeditor/editor": "^1.13.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
@@ -31,6 +33,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.6.0",
     "@heroicons/react": "^2.0.18",
     "@iconify/react": "^4.1.1",
     "@types/node": "20.3.1",
