--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^14.2.3",
+    "react-intersection-observer": "^9.5.3",
     "react-markdown": "^9.0.1",
     "react-markdown-renderer": "^1.4.0",
     "rehype-sanitize": "^6.0.0",
