--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "javascript-time-ago": "^1.0.16",
     "moment": "^2.29.4",
     "next": "latest",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
@@ -39,6 +39,7 @@
     "@capacitor/cli": "^5.6.0",
     "@heroicons/react": "^2.0.18",
     "@iconify/react": "^4.1.1",
+    "@types/javascript-time-ago": "^2.0.8",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
