--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
+    "tus-js-client": "^4.1.0",
+    "typescript": "5.1.3",
+    "use-tus": "^0.8.1"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.6.0",
