--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,8 @@
     "prettier"
   ],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "error",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": "off",
 
     "react-hooks/exhaustive-deps": "off" // caution <-
   },
