--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "latest",
     "@tailwindcss/typography": "^0.5.10",
     "@uiw/react-md-editor": "^4.0.1",
+    "ably": "^2.3.0",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
     "javascript-time-ago": "^1.0.16",
