--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
-
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -20,10 +19,13 @@
     "@uiw/react-md-editor": "^4.0.1",
     "ably": "^2.3.0",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.16.4",
     "geist": "^1.0.0",
     "gulp-header": "^1.8.9",
     "gulp-util": "^1.0.0",
     "javascript-time-ago": "^1.0.16",
+    "motion": "^11.16.4",
     "next": "latest",
     "postcss": "^8.4.32",
     "react": "18.2.0",
@@ -36,6 +38,7 @@
     "react-markdown-renderer": "^1.4.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tus-js-client": "^4.1.0",
     "typescript": "5.1.3",
