--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "javascript-time-ago": "^1.0.16",
     "motion": "^11.16.4",
     "next": "latest",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,6 +41,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-theme-variants": "^2.0.0-beta.0",
     "tus-js-client": "^4.1.0",
     "typescript": "5.1.3",
     "use-tus": "^0.8.1"
