--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "ably": "^2.3.0",
     "autoprefixer": "10.4.15",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.16.4",
+    "framer-motion": "^11.18.2",
     "geist": "^1.0.0",
+    "gsap": "^3.13.0",
     "gulp-header": "^1.8.9",
     "gulp-util": "^1.0.0",
     "javascript-time-ago": "^1.0.16",
