--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "geist": "^1.0.0",
+    "gif-picker-react": "^1.4.0",
     "gsap": "^3.13.0",
     "gulp-header": "^1.8.9",
     "gulp-util": "^1.0.0",
